--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,13 @@
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<!-- Lombok -->
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<optional>true</optional>
+		</dependency>
+		<!-- Lombok -->
 		<!-- Spring doc -->
 		<dependency>
 			<groupId>org.springdoc</groupId>
